# Sablinova-Cogs

./: .gitignore  README.md
BridgeCog/: __init__.py  bridge.py
YTD/: __init__.py  info.json  ytd.py
backup/: __init__.py  backup.py  info.json
chat/: info.json  pyproject.toml
chat/chatlib/commands/: agent.py  base.py  chat_commands.py  meta.py  tarot.py
chat/chatlib/utils/: model_querying.py
denuvoauto/: README.md  __init__.py  denuvoauto.py  info.json
denuvowatch/: README.md  __init__.py  denuvowatch.py  info.json
honeypot/: README.md  __init__.py  honeypot.py  info.json
pubhelper/: README.md  __init__.py  fix_all.py  fix_base_backticks.py  fix_duplicate.py  fix_ephemeral.py  fix_fuzzy.py  fix_images.py  fix_images_clean.py  fix_list.py  fix_match.py  fix_metaphor.py  fix_syntax.py  funny_saveinst.json  info.json  list_view.py  pubhelper.py  refactor.py  save007.py  savesigner.py  swap_keys.py
roleall/: __init__.py  info.json  roleall.py
sabby/: __init__.py  info.json  sabby.py
sabbyslashtags/: __init__.py  info.json  sabbyslashtags.py
sabdownloader/: README.md  __init__.py  info.json  sabdownloader.py
sabhoneypot/: README.md  __init__.py  info.json  sabhoneypot.py
sabmutemessage/: README.md  __init__.py  info.json  sabmutemessage.py
statusrole/: __init__.py  info.json  statusrole.py
tidbstats/: __init__.py  info.json  tidbstats.py
videoguide/: __init__.py  guide.py
